# matter_extension

./: .gitattributes  .gitmodules  CODEOWNERS  Jenkinsfile  LICENSE  README.md  matter.slce  matter.slsdk  matter_demos.xml  matter_docs.xml  matter_templates.xml  requirements.txt  sled-library.json  upgrade.slcu
component/matter-silabs/: MatterTestFile.cpp  matter_test_component.slcc
cpms/: README.md  chip-cert
cpms/images/: efr32mg12.s37  efr32mg24.s37
demos/BRD2601B/OpenThread/: dishwasher-app-no-lcd-thread.s37  dishwasher-app-thread.s37  light-switch-app-no-lcd-thread.s37  light-switch-app-thread.s37  lighting-app-no-lcd-thread.s37  lighting-app-thread.s37  lock-app-no-lcd-thread.s37  lock-app-thread.s37  onoff-plug-app-no-lcd-thread.s37  onoff-plug-app-thread.s37  sensor-app-no-lcd-thread.s37  sensor-app-thread.s37  window-app-no-lcd-thread.s37  window-app-thread.s37
demos/BRD2608A/OpenThread/: dishwasher-app-thread.s37  light-switch-app-thread.s37  lighting-app-thread.s37  lock-app-thread.s37  onoff-plug-app-thread.s37  sensor-app-thread.s37  (+2 more)
docs/: CHERRY_PICKING_CSA_COMMITS.md  CONTRIBUTING.md
examples/build_overrides/: build.gni  chip.gni  editline.gni  efr32_sdk.gni  jlink.gni  jsoncpp.gni  lwip.gni  matter_extension.gni  mbedtls.gni  nlassert.gni  nlfaultinjection.gni  nlio.gni  openthread.gni  ot_br_posix.gni  pigweed.gni  pigweed_environment.gni
examples/multi-sensor-app/: BUILD.gn  build_for_wifi_args.gni  openthread.gni
examples/multi-sensor-app/config/: sl_matter_sensor_config.h
examples/multi-sensor-app/data_model/: multi-sensor-thread-app.matter  multi-sensor-thread-app.zap  multi-sensor-wifi-app.matter  multi-sensor-wifi-app.zap
examples/multi-sensor-app/include/: AppConfig.h  AppEvent.h  AppTask.h  SensorManager.h
examples/multi-sensor-app/src/: AppTask.cpp  DataModelCallbacks.cpp  SensorManager.cpp  SensorsUI.cpp
examples/onoff-plug-app/: BUILD.gn  README.md  openthread.gni
examples/platform/silabs/efr32/rs911x/: rs9117.gni  rs911x.gni  rsi_if.c  rsi_wlan_config.h  sl_wifi_if.c  wfx_rsi.h  wfx_rsi_host.c  wfx_rsidev.c
examples/platform/silabs/efr32/rs911x/hal/: efx32_ncp_host.c  efx_spi.c  rsi_board_configuration.h  rsi_hal.h  rsi_hal_mcu_interrupt.c  rsi_hal_mcu_ioports.c  rsi_hal_mcu_rtc.c  rsi_hal_mcu_timer.c  sl_board_configuration.h  sl_board_configuration_SiWx917.h  sl_si91x_ncp_utility.c  sl_si91x_ncp_utility.h
examples/template/: BUILD.gn  HOW_TO_CREATE_A_CUSTOM_APP.md  README.md  args.gni
jenkins_integration/: Jenkinsfile  config.py  jenkinsFunctions.groovy  utils.py
jenkins_integration/artifacts/: artifact_processor.py  artifactory_client.py  ubai_client.py  upload_artifacts.py
jenkins_integration/github/: github_workflow.py  send_results_to_github.py
provision/: README.md  apack.info  apack.json  apackGenerateNothing.py  apackUpgradeEmptyResult.py  defaults.json  devices.yaml  provision.py  support.py  versions.yaml
provision/generator/: app.cpp  app.h  efr32.cpp  efr32.slcp  generator_efr32.slcp  generator_siwx917.slcp  nvm3_si917.c  si917.cpp  si917.slcp  si917_psa.slcp
provision/images/: efr32mg12.s37  efr32mg12_psa123_nvm3k2.s37  efr32mg12_psa12_nvm3k1.s37  efr32mg12_psa12_nvm3k2.s37  efr32mg12_psa3_nvm3k2.s37  efr32mg24.s37  efr32mg24_csr_oids.s37  efr32mg24_psa123_nvm3k2.s37  efr32mg24_psa12_nvm3k1.s37  efr32mg24_psa12_nvm3k2.s37  efr32mg24_psa3_nvm3k2.s37  efr32mg24_psa3_nvm3k3.s37  efr32mg24_ram.s37  efr32mg26_csr_oids.s37  efr32mg26_psa3_nvm3k2.s37  efr32mg26_psa3_nvm3k2_boot.s37  efr32mg26_ram.s37  si917.rps  si917.s37  si917_brd4343a_nvm3k2.rps  si917_csr_oids.rps  si917_nvm3k2.rps  si917_nvm3k3.rps  si917y_csr_oids.rps  si917y_nvm3k2.rps  si917y_nvm3k3.rps  sixg3_psa123_nvm3k2.s37  sixg3_psa3_nvm3k3.s37  sixg3k_csr_oids.s37  sixg3k_psa3_nvm3k3.s37  sixg3l_csr_oids.s37  sixg3w_csr_oids.s37  sixg3w_psa3_nvm3k3.s37  sixg3x_csr_oids.s37
provision/inputs/: silabs.json
provision/modules/: arguments.py  commander.py  credentials.py  device.py  exporter.py  formatter.py  jlink.py  manager.py  parameters.py  parameters.yaml  tools.py  util.py  versions.py
provision/support/: JLinkDevices.xml
silabs_examples/DIC_Examples/: DIC_EventHandler.cpp
silabs_examples/zigbee-matter-light/: README.md  zigbee-matter-light.slcp
silabs_sample_apps/empty_matter_project/: empty_matter_project.pintool  empty_matter_project.slcp  main.cpp
silabs_utils/: README.md  init_matter_multipan.cpp  init_matter_multipan.h  lighting-thread-app-perf-test.zap  performance_test_commands.cpp  performance_test_commands.h
slc/: .gitignore  README.md  build.sh  copy-app.sh  copy-extension.sh  sl_build.py  sl_create_new_app.py  sl_project_upgrade.py  sl_run_zaptool.py  sl_setup_env.py  stage_extension.py
slc/component/: linkerfile_common.ld.jinja  matter.slcc  matter_917soc.slcc  toolchain_gcc_common.slcc  toolchain_gcc_dual.slcc
slc/config/: sl_matter_config.h  sl_matter_icd_config.h  sl_matter_ota_config.h  sl_matter_provision_config.h  sl_matter_sleepy_config.h  sl_matter_test_event_trigger_config.h  sl_matter_test_event_trigger_config.h~  sl_matter_wifi_config.h  sli_psa_builtin_config_autogen.h
slc/inc/: brd4161a.h  brd4170a.h  brd4186c.h
slc/postbuild/: matter_wifi_soc.slpb  ws_default_application_bootloader.slpb
slc/script/: build_ot_rcp.py  dependency_versions.yaml  em1-augmentation.py  enable_copy_contents.py  file_path_length_analyzer.py  find_missing_sbom.py  gen_cluster_components.py  gen_components.py  gen_static_zap_includes.py  generate_metadata.py  generate_pkg_slt.py  get_slce_extra_paths.py  get_zap_version.py  gsdk_matter.patch  list_header_files.py  matter_package_version  tag_release_version.py  update_version.py  validate_components.py  validate_matter_templates.py  verify_package_matter.py  verify_vendor_silabs.py
src/patch/: Globals.cpp  WifiInterface.cpp
src/sl_platform/: SystemLayerImplSlSockets.cpp  SystemLayerImplSlSockets.h  UDPEndPointImplSlSockets.cpp  UDPEndPointImplSlSockets.h
tools/: iot_reports.py
tools/matter_rpi_image/: README.md
tools/pymattertool/: README.md  main.py
(+2248 files in other folders)
