import("//build_overrides/chip.gni")

examples_plat_dir = "${chip_root}/examples/platform/silabs/efr32"
wifi_sdk_dir = "${chip_root}/src/platform/silabs/efr32/wifi"
wifi_sdk_root = "${chip_root}/third_party/silabs/wifi_sdk"

rs911x_src_plat = [
  "${examples_plat_dir}/rs911x/sl_wifi_if.c",
  "${examples_plat_dir}/rs911x/wfx_rsi_host.c",
  "${examples_plat_dir}/rs911x/hal/rsi_hal_mcu_interrupt.c",
  "${examples_plat_dir}/rs911x/hal/efx_spi.c",
  "${wifi_sdk_dir}/wfx_notify.cpp",
]

rs9117_inc_plat = [
  "${examples_plat_dir}/rs911x",
  "${examples_plat_dir}/rs911x/hal",

   # si91x component
  "${wifi_sdk_root}/components/device/silabs/si91x/wireless/ble/inc",
  "${wifi_sdk_root}/components/device/silabs/si91x/wireless/inc",
  "${wifi_sdk_root}/components/common/inc",
  "${wifi_sdk_root}/components/si91x/memory",
  "${wifi_sdk_root}/components/device/silabs/si91x/wireless/sl_net/inc",

  # wifi component
  "${wifi_sdk_root}/components/protocol/wifi/inc",

  # si91x_support component
  "${wifi_sdk_root}/components/si91x_support/inc",

  # wifi_resources component
  "${wifi_sdk_root}/resources/certificates",
  "${wifi_sdk_root}/resources/defaults",
  "${wifi_sdk_root}/resources/other",

  # network_manager component
  "${wifi_sdk_root}/components/service/network_manager/inc",

  "${wifi_sdk_root}/components/protocol/wifi/si91x",
]

rs911x_cflags = [ "-Wno-empty-body" ]
rs9117_src_sapi = [
  "${wifi_sdk_root}/components/device/silabs/si91x/wireless/src/sl_si91x_driver.c",
  "${wifi_sdk_root}/components/device/silabs/si91x/wireless/spi_interface/sl_si91x_spi_driver.c",
  "${wifi_sdk_root}/components/device/silabs/si91x/wireless/src/sl_rsi_utility.c",
  "${wifi_sdk_root}/components/device/silabs/si91x/wireless/src/sl_si91x_callback_framework.c",
  "${wifi_sdk_root}/components/device/silabs/si91x/wireless/threading/sli_si91x_multithreaded.c",
  "${wifi_sdk_root}/components/device/silabs/si91x/wireless/sl_net/src/sl_si91x_net_credentials.c",
  #"${wifi_sdk_root}/components/si91x/sl_net/src/sl_net_si91x.c",
  "${wifi_sdk_root}/components/device/silabs/si91x/wireless/sl_net/src/sl_net_rsi_utility.c",
  "${wifi_sdk_root}/components/device/silabs/si91x/wireless/sl_net/src/sl_net_si91x_integration_handler.c",

  # wifi component
  "${wifi_sdk_root}/components/protocol/wifi/src/sl_wifi_callback_framework.c",
  "${wifi_sdk_root}/components/protocol/wifi/si91x/sl_wifi.c",

  # basic_network_manager component
  "${wifi_sdk_root}/components/service/network_manager/src/sl_net_basic_credentials.c",
  "${wifi_sdk_root}/components/service/network_manager/src/sl_net_basic_profiles.c",

  # si91x_basic_buffers component
  "${wifi_sdk_root}/components/device/silabs/si91x/wireless/memory/malloc_buffers.c",

  # si91x_support component
  "${wifi_sdk_root}/components/common/src/sl_utility.c",

  # network_manager component
  "${wifi_sdk_root}/components/service/network_manager/src/sl_net_basic_certificate_store.c",
  "${wifi_sdk_root}/components/service/network_manager/src/sl_net.c",
  #"${wifi_sdk_root}/components/device/silabs/si91x/wireless/host_mcu/efx32/efx32_ncp_host.c",
]
